# cs492dCourseProject

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
GPU_jobs/: train.sh
data/quickdraw/processed/cat/: train_test_indices.json
data/quickdraw/processed/garden/: train_test_indices.json
data/quickdraw/processed/helicopter/: train_test_indices.json
notebooks/: Visual.ipynb  load_data.ipynb  test.ipynb  traindata_illustrations.ipynb
scripts/filter_quickdraw/: create_datasplit_json.py  create_datasplit_json_all.sh  filter_data.py  filter_data_all.sh  filter_data_seq.py  filter_data_seq_all.sh
seqsketch/: inference.py  train.py
seqsketch/callbacks/: __init__.py  plotting.py
seqsketch/configs/: baseline.yaml  baseline2.yaml  unconditional.yaml
seqsketch/data/: __init__.py  data_generator.py  data_generator2.py
seqsketch/models/: __init__.py  diffusion_model.py  diffusion_model2.py  modules.py  schedulers.py  strokedenoiser.py  unet.py
seqsketch/utils/: config.py  default.yaml  modules.py
